style.css
*{
    margin: 0px;
    padding: 0;
    /* outline: 1px solid red; */
}

html, body{
    overflow-x: hidden;
}

.landingPage{
  display: flex;
  flex-direction: column;
  width: 100vw;
  height: 100dvh;
  pointer-events: none;
  background-color: #000000;

}

/* bella landing page*/

.topscreenBella{
  position: absolute;
  white-space: nowrap;
  margin: 4dvh;
  margin-top: 6dvh;
  padding: 1vw;
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  font-style: italic;
  animation: marquee 5s linear infinite;
  color: #ffffff;
  background-color: #000000;
  z-index: 7;
  border-top: solid 2px rgb(255, 255, 255);
  border-bottom: solid 2px rgb(255, 255, 255);
  pointer-events: none;
}

.bellahf{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  pointer-events: none;
  overflow: visible;
}

.headerBella{
  display: flex;
  margin-top: 7em;
  justify-content: center;
  align-items: center;
  z-index: 3;
}

.headerBella img{
  max-width:17em;
  height: auto;
  filter: drop-shadow(0.1em 0.4em 0px rgb(0, 0, 0));
}


.footerBella{
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1em;
  margin-top: 2dvh;
  z-index: 3;
  pointer-events: none;
}

.footerBella img{
  max-width: 17em;
  height: auto;
  filter: drop-shadow(0.1em 0.4em 0px rgb(0, 0, 0));
  pointer-events: none;
}


.wallpaperBella{
  position: fixed;
  max-width: 100%;
  height: auto;
  object-fit: contain;
  mix-blend-mode: multiply;
  opacity: 50%;
  z-index: 1;
  pointer-events: none;

}

.wallpaperBella img{
  max-width: 100vw;
  pointer-events: none;


}

.gradientBella{
  position: fixed;
  height: 100dvh;
  width: 100vw;
  object-fit: cover;
  align-items: center;
  display: block;
  pointer-events: none;
}

.gradientBella img{
  height: 100dvh;
  width: 100vw;
  pointer-events: none;
}

.bbb{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  /* width: 100%; */
  pointer-events: none;
  overflow: visible;
  margin: 0em auto;
  margin-top: 7em;
  margin-bottom: 5em;
  height: 50dvh;
  width: 70vw;
}

.bellaBella{
  display: flex;
  align-items: center;
  justify-content: center;
  height: 23em;
  width: 100%;
  object-fit: contain;
  z-index: 2;
  pointer-events: none;
}


.bellaBella img{
  max-width: 27em;
  pointer-events: none;
}

.bubbleBella {
    width: 14em;
    height: 2.5em;
    background: rgb(0, 0, 0);
    /* border-top: solid 2px rgb(255, 255, 255);
    border-bottom: solid 2px rgb(255, 255, 255); */
    color: #bababa;
    font-family: Arial;
    font-size: 1em;
    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-style: italic;
    text-align: center;
    line-height: 0em;
    border-radius: 3em;
    white-space: nowrap;
    z-index: 6;
    pointer-events: none;
    position: relative;

    

    opacity: 1;
    animation: fadeInUp 1.5s;
    -webkit-animation: fadeInUp 1.5s;
    animation-delay: 1s;
    -webkit-animation-delay: 1s;
    animation-fill-mode: backwards;
    -webkit-animation-fill-mode: backwards;

}

.bubbleBella::after {
    content: '';
    display: flex;
    position: relative;
    bottom: -1.7em;    
    left: 70%;    
    width: 1.8em;
    height: 1.8em;
    background: black;
    /* border: 3px groove #bababa; */
    border-radius: 50%;
    z-index: -1;

}

.bubbleBella::before {
    content: '';
    display: flex;
    position: relative;
    bottom: -4.3em;    
    left: 64%;    
    width: 1em;
    height: 1em;
    background: black;
    /* border: 3px groove #bababa; */
    border-radius: 50%;
    z-index: 6;

}


@-webkit-keyframes fadeInUp{
    0%{
      opacity: 0;
      -webkit-transform: translateY(10px);
    }
    100%{
      opacity: 1;
      -webkit-transform: translateY(0);
    }

    
}

@keyframes fadeInUp{
    0%{
      opacity: 0;
      -webkit-transform: translateY(10px);
    }
    100%{
      opacity: 1;
      -webkit-transform: translateY(0);
    }
}

.frameBella{
  position: fixed;
  height: 100dvh;
  width: 100vw;
  object-fit: cover;
  align-items: center;
  z-index: 7;
  pointer-events: none;
  opacity: 1;

}

.frameBella img{
  width: 100%;
  height: 100%;
  display: block;
  pointer-events: none;
}

.toyIndex{
  position: relative;
  display: flex;
  flex-direction: column;
  height: 50dvh;
  width: 16em;
  align-items: center;
  justify-content: center;
  margin: 0em auto;
  margin-top: 12em;
  z-index: 6;
  filter: grayscale(100%);

}

.bottomScreenBella{
  position: relative;
  white-space: nowrap;
  margin: 1dvh;
  margin-top: 1dvh;
  padding: 1vw;
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  font-style: italic;
  letter-spacing: 0.5em;
  text-transform: uppercase;
  animation: marquee 5s linear infinite;
  color: #ffffff;
  background-color: #000000;
  z-index: 7;
  border-top: solid 2px rgb(255, 255, 255);
  border-bottom: solid 2px rgb(255, 255, 255);
  pointer-events: none;
}

.toyImages{
  display: flex;
  background: black;
  border: 5px ridge #ffffff;
  border-radius: 1em;
  padding: 0.5em 0;
  margin: 1em 0;
  flex-direction: row;
  align-items: end;
  justify-content: center;
  z-index: 6;
  position: relative;
  filter: drop-shadow(0.5em 0.5em 0px rgb(68, 68, 68));
}

.toyImages:active{
    transform: translate(0.5em);
    transition: 0.01s ease-in;
    filter: grayscale(0%);
    filter: drop-shadow(none);
  }


.toyImages a{
  position: absolute;
  display: flex;
  flex-direction: column;
  pointer-events: all;
  inset: 1em;
}


.toyImages img{
  max-width: 95%;
  max-height: 100%;
  object-fit: contain;
  display: block;
  pointer-events: none;
}


.toyImagesFooter marquee{
  display: flex;
  position: relative;
  justify-content: center;
  align-items: center;
  /* margin: 2em; */
  margin-top: 3em;
  margin-bottom: 5em;
  width: 20em;
  height: 1.6em;
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  font-size: 1em;
  font-style: italic;
  color: white;
  border-top: solid 2px rgb(255, 255, 255);
  border-bottom: solid 2px rgb(255, 255, 255);
  background-color: #000000;
}

/* duncan */


.bgColorDuncan{
  width: 100vw;
  height: 100dvh;
  background-color: black;
  z-index: -2;
}

.bgImageDuncan{
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

  width: 80vw;
  height: 80dvh;

  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;
  z-index: 0;
  border: 5mm ridge rgb(237, 206, 172);
  border-radius: 40em;
}

canvas{
  display: block;
  position: fixed;
}

.marqueeScreenDuncan{

  top: 60%;
  left: -10%;
  right: -10%;
  transform: rotate(-30deg);

  
  position: fixed ;
  white-space: nowrap;
  overflow: visible;

  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  font-style: italic;
  font-size: 3em;

  animation: marquee 3s linear infinite;
  color: #fff2e3;
  z-index: 3;

}

#headerDuncan{

    position: fixed;

    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    

    display: flex;
    justify-content: center; 
    position: fixed;
    width: 100%;
    
    z-index: 2;
}
/* #header h1{
    margin-top: 10px;
    margin-left: 15px;
    font-size: 7vw;
} */

#headerDuncan img{
  max-width:100vw;
  height: auto;
  transform: rotate(-30deg);

  animation-duration: 3s;
  animation-name: slide-in;
  animation-iteration-count: infinite;
  animation-direction: alternate;
}


/* godwin */

.topscreenGodwin{
position: fixed ;
white-space: nowrap;
margin:1em;
padding: 0.5em;
font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
font-style: italic;
animation: marquee 5s linear infinite;
color: #000000;
background-color: #fed1ff;
border-top: solid 1px black;
border-bottom: solid 1px black;
z-index: 2;
pointer-events: none;
width: fit-content;
}

#headerGodwin{
    display: flex;
    margin-top: 6vh;
    justify-content: left; 
    margin-left: 1em;
    position: fixed;
    width: 100%;
    z-index: 2;
    pointer-events: none;
    width: fit-content;
}
/* #header h1{
    margin-top: 10px;
    margin-left: 15px;
    font-size: 7vw;
} */

#headerGodwin img{
  max-width:15em;
  height: auto;
}


#app {
    width: 100%;
    height: 100vh;
    background: #fff2e3;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    overflow-y: hidden;
    pointer-events: all;

  }
  
  .doors {
    display: flex;
  }
  
  .door {
    background: #000000;
    width: 9em;
    height: 35em;
    overflow: hidden;
    margin-top: 10em;
    margin-bottom: 1em;
    border: 3mm ridge rgb(254, 209, 255);

  }

    .door:nth-child(1n){
    border-radius: 100px 0px 0px 100px;
  }

    .door:nth-child(2n){
     border-radius: 0px 100px 100px 0px;
  }
  
  .boxes {
    transition: transform 1s ease-in-out;
  }
  
  .buttons {
    margin: 35em 0em 5em 0em;
    position: absolute;
    display: flex;
    width: 6em;
    height: 3em;
    transform: rotate(0deg);
    border-radius: 2%;
    text-wrap: wrap;
    overflow: hidden;
    background-color: #fed1ff;

    outline: 3mm ridge #fed1ff;

  }
  
  button {
    font-size: 1em;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    color: #000000;
    background-color: #fff2e3;


  }

  .godwinFooter marquee{
  display: flex;
  position: relative;
  justify-content: center;
  align-items: center;
  /* margin: 2em; */
  margin-top: 1em;
  margin-bottom: 1em;
  width: 22em;
  height: 1.6em;
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  font-size: 1em;
  font-style: italic;
  color: rgb(0, 0, 0);
  border-top: solid 1px rgb(0, 0, 0);
  border-bottom: solid 1px rgb(0, 0, 0);
  background-color: #fed1ff;
  pointer-events: none;

}

  /* button:active{
    transform: translateY(4px);
    transition: 0.01s ease-in;
    background-color: #5695d2;
    
  } */

/* menu */

.menu {
  display: flex;
  width: auto;
  height: auto;
  position: fixed;
  top: 2vh;
  right: 5vw;
  z-index: 10;
  justify-content: flex-end;
  align-items: center;
  /* pointer-events: none; */
}

.menu a{
  display: flex;
  pointer-events: all;
}

.menu img{
  width: 15vw;
  height: auto;
  pointer-events: none;
}

